Source/WebCore/platform/graphics/BitmapImage.cpp
@@ -46,8 +46,42 @@
 namespace WebCore {
 
 BitmapImage::BitmapImage(ImageObserver* observer)
-    : BitmapImage(observer, std::false_type())
+    : Image(observer)
+    , m_isSolidColor(false)
+    , m_checkedForSolidColor(false)
+    , m_animationFinished(false)
+    , m_allDataReceived(false)
+    , m_haveSize(false)
+    , m_sizeAvailable(false)
+    , m_haveFrameCount(false)
+    , m_animationFinishedWhenCatchingUp(false)
 {
+}
+
+BitmapImage::BitmapImage(NativeImagePtr&& image, ImageObserver* observer)
+    : Image(observer)
+    , m_source(image)
+    , m_frameCount(1)
+    , m_isSolidColor(false)
+    , m_checkedForSolidColor(false)
+    , m_animationFinished(true)
+    , m_allDataReceived(true)
+    , m_haveSize(true)
+    , m_sizeAvailable(true)
+    , m_haveFrameCount(true)
+    , m_animationFinishedWhenCatchingUp(false)
+{
+    // Since we don't have a decoder, we can't figure out the image orientation.
+    // Set m_sizeRespectingOrientation to be the same as m_size so it's not 0x0.
+    m_sizeRespectingOrientation = m_size = NativeImage::size(image);
+    m_decodedSize = m_size.area() * 4;
+    
+    m_frames.grow(1);
+    m_frames[0].m_hasAlpha = NativeImage::hasAlpha(image);
+    m_frames[0].m_haveMetadata = true;
+    m_frames[0].m_image = WTFMove(image);
+    
+    checkForSolidColor();
 }
 
 BitmapImage::~BitmapImage()
@@ -171,10 +205,6 @@ void BitmapImage::cacheFrame(size_t index, SubsamplingLevel subsamplingLevel, Im
 
     m_frames[index].m_hasAlpha = m_source.frameHasAlphaAtIndex(index);
     m_frames[index].m_frameBytes = m_source.frameBytesAtIndex(index, subsamplingLevel);
-
-    const IntSize frameSize(index ? m_source.frameSizeAtIndex(index, subsamplingLevel) : m_size);
-    if (!subsamplingLevel && frameSize != m_size)
-        m_hasUniformFrameSize = false;
 
     if (m_frames[index].m_image) {
         int deltaBytes = safeCast<int>(m_frames[index].m_frameBytes);
@@ -307,7 +337,7 @@ bool BitmapImage::dataChanged(bool allDataReceived)
 #endif
 
     m_haveFrameCount = false;
-    m_hasUniformFrameSize = true;
+    m_source.setNeedsUpdateMetadata();
     return isSizeAvailable();
 }
 
